@@ -133,7 +133,7 @@ public:
     }
 
     virtual bool isConnected() const=0;
-    virtual void rescan()=0;
+    virtual void rescan(bool full=true)=0;
     virtual bool isRefreshing() const=0;
     bool isIdle() const { return isConnected() && !isRefreshing(); }
     virtual void configure(QWidget *) { }
